# OpenCTM

./: CMakeLists.txt  conanfile.py
lib/: CMakeLists.txt
